--- a/classcontent.html
+++ b/classcontent.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;500&family=Noto+Serif+TC:wght@300;400&family=Roboto:wght@300&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/common.css">
   <title>手捏器皿｜又煦陶作</title>
 </head>
