--- a/classcontent.html
+++ b/classcontent.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;500&family=Noto+Serif+TC:wght@300;400&family=Roboto:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/common.css">
   <title>手捏器皿｜又煦陶作</title>
@@ -85,8 +85,8 @@
       </ul>
       <ul class="info-box">
         <li><a href="">950<br>台東縣台東市杭州街118號1樓</a></li>
-        <li><a href="">(+886) 921-271-867</a></li>
-        <li><a href="">yoshipottery@gmail.com</a></li>
+        <a href="" class="roboto">(+886) 921-271-867</a><br>
+                <a href="" class="roboto">yoshipottery@gmail.com</a>
       </ul>
       <div class="footer-brandbox">
         <div class="follow-box">
