--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;500&family=Noto+Serif+TC:wght@300;400&family=Roboto:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/common.css">
   <title>又煦陶作</title>
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="about-r w-45">
-        <p class="w-70">又煦陶作位於台灣台東市，主理者回家鄉開設陶藝工作室，提供陶藝教學與器皿製作，希望工藝能走進大家的生活中。</p>
+        <p class="w-70">又煦陶作位於台灣台東市，主理者回家郷開設陶藝工作室，提供陶藝教學與器皿製作，希望工藝能走進大家的生活中。</p>
         <p class="w-70">又煦有再度和煦溫暖之意，製作的生活陶器以簡單的線條及釉色為主，一個一個拉胚手作，保留陶器樸質與自然的特性，也延續工藝技法及它的美好。</p>
         <div class="ab-imgbox">
           <img src="./assets/about_02.png" alt="">
@@ -155,11 +155,11 @@
               <p>工作室採預約制，如預參觀請來電洽詢。</p>
               <div class="info-box">
                 <a href="">950<br>台東縣台東市杭州街118號1樓</a><br>
-                <a href="">(+886) 921-271-867</a><br>
-                <a href="">yoshipottery@gmail.com</a>
+                <a href="" class="roboto">(+886) 921-271-867</a><br>
+                <a href="" class="roboto">yoshipottery@gmail.com</a>
               </div>
               <div class="follow-box">
-                <span class="label">follow us</span>
+                <span class="roboto">follow us</span>
                 <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img
                     src="./assets/instagram.svg" alt=""></a>
                 <span class="label">/</span>
@@ -188,8 +188,8 @@
       </ul>
       <ul class="info-box">
         <li><a href="">950<br>台東縣台東市杭州街118號1樓</a></li>
-        <li><a href="">(+886) 921-271-867</a></li>
-        <li><a href="">yoshipottery@gmail.com</a></li>
+        <a href="" class="roboto">(+886) 921-271-867</a><br>
+        <a href="" class="roboto">yoshipottery@gmail.com</a>
       </ul>
       <div class="footer-brandbox">
         <div class="follow-box">
