--- a/_popup_menu.html
+++ b/_popup_menu.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;500&family=Noto+Serif+TC:wght@300;400&family=Roboto:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/common.css">
   <title>menu</title>
