--- a/_guideline.html
+++ b/_guideline.html
@@ -18,19 +18,21 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
-    <a href="index.html"><img src="./assets/logo1.svg" alt=""></a>
-    <div class="navlink-wrap">
-      <li class="navlink"><a href="arts.html">藝術陶</a></li>
-      <li class="navlink"><a href="works.html">生活陶</a></li>
-      <li class="navlink"><a href="class.html">課程教學</a></li>
-      <li class="navlink"><a href="contact.html">聯絡我們</a></li>
-      <div class="menu-box">
-        <div class="line-1"></div>
-        <div class="line-2"></div>
+  <header>
+    <nav class="navbar">
+      <a href="index.html"><img src="./assets/logo1.svg" alt=""></a>
+      <div class="navlink-wrap">
+        <li class="navlink"><a href="arts.html">藝術陶</a></li>
+        <li class="navlink"><a href="works.html">生活陶</a></li>
+        <li class="navlink"><a href="class.html">課程教學</a></li>
+        <li class="navlink"><a href="contact.html">聯絡我們</a></li>
+        <div class="menu-box">
+          <div class="line-1"></div>
+          <div class="line-2"></div>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
   <!-- NAVBAR -->
 
   <div class="container" style="margin-top: 100px;">
