--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
   <!-- NAVBAR -->
   <!-- CONTAINER -->
   <main>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
     <section class="contact-section">
       <div class="index-contact-wrap wrap-row">
         <div class="contact-l w-40">
