--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <!-- NAVBAR -->
   <!-- CONTAINER -->
   <main>
-    <p class="copyright caption">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
     <!-- landing section -->
     <section class="hero-section">
       <div class="w-35">
