--- a/works.html
+++ b/works.html
@@ -33,6 +33,9 @@
   <!-- NAVBAR -->
   <!-- CONTAINER -->
   <main>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
     <div class="work-banner w-100"></div>
     <div class="container">
       <div class="work-title-wrap wrap-row">
