--- a/class.html
+++ b/class.html
@@ -32,6 +32,9 @@
   <!-- NAVBAR -->
   <!-- CONTAINER -->
   <main>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
     <section>
       <div class="container">
         <div class="class-hero">
