--- a/classcontent.html
+++ b/classcontent.html
@@ -32,6 +32,9 @@
   <!-- NAVBAR -->
   <!-- CONTAINER -->
   <main>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
     <div class="class-title-wrap">
       <a href="./class.html">
         <h6>課程教學</h6>
@@ -86,7 +89,7 @@
       <ul class="info-box">
         <li><a href="">950<br>台東縣台東市杭州街118號1樓</a></li>
         <a href="" class="roboto">(+886) 921-271-867</a><br>
-                <a href="" class="roboto">yoshipottery@gmail.com</a>
+        <a href="" class="roboto">yoshipottery@gmail.com</a>
       </ul>
       <div class="footer-brandbox">
         <div class="follow-box">
