--- a/_popup_menu.html
+++ b/_popup_menu.html
@@ -17,33 +17,31 @@
 <body>
   <div class="menu-section">
     <div class="menubg w-35"></div>
-    <div class="w-70 px-24">
-      <div class="menu-content wrap-column">
-        <div class="menulink-box wrap-column">
-          <a href="./index.html" class="menulink">首頁</a>
-          <a href="./arts.html" class="menulink">藝術陶</a>
-          <a href="./works.html" class="menulink">生活陶</a>
-          <a href="./class.html" class="menulink">課程教學</a>
-          <a href="./contact.html" class="menulink">聯絡我們</a>
+    <div class="menu-content">
+      <div class="menu-link-wrap">
+        <a href="./index.html" class="menulink">首頁</a>
+        <a href="./arts.html" class="menulink">藝術陶</a>
+        <a href="./works.html" class="menulink">生活陶</a>
+        <a href="./classes.html" class="menulink">課程教學</a>
+        <a href="./contact.html" class="menulink">聯絡我們</a>
+      </div>
+      <div class="menu-contact-wrap">
+        <h6 class="item-1">聯絡我們</h6>
+        <div class="menu-info-wrap">
+          <p class="item-2 label">〒950 台東縣台東市杭州街118號1樓</p>
+          <p class="item-3 label">(+886) 921-271-867</p>
         </div>
-        <div class="menu-contact-box">
-          <h6 class="item-1 w-100">聯絡我們</h6>
-          <div class="w-30">
-            <p class="item-2 label">〒950 台東縣台東市杭州街118號1樓</p>
-            <p class="item-3 label">(+886) 921-271-867</p>
-          </div>
-          <div class="wrap-column">
-            <a href="https://www.instagram.com/yoshipottery/" target=_blank class="item-5"> <img
-                src="./assets/instagram-02.svg" alt=""></a>
-            <a href="https://www.facebook.com/yoshipottery" target=_blank class="item-6"> <img
-                src="./assets/facebook-02.svg" alt=""></a>
-          </div>
-          <div>
-            <a href="./contact.html" class="item-7 btn btn-secondary-outline">報名課程</a>
-            <a href="./contact.html" class="item-8 btn btn-secondary-outline">陶器訂製</a>
-          </div>
-          <p class="item-4 label w-100">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+        <div class="menu-sns-wrap">
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="item-4"> <img
+              src="./assets/instagram-02.svg" alt=""></a>
+          <a href="https://www.facebook.com/yoshipottery" target=_blank class="item-5"> <img
+              src="./assets/facebook-02.svg" alt=""></a>
         </div>
+        <div class="menu-btn-wrap">
+          <a href="./contact.html" class="item-6 btn btn-secondary-outline">報名課程</a>
+          <a href="./contact.html" class="item-7 btn btn-secondary-outline">陶器訂製</a>
+        </div>
+        <p class="item-8 label w-100">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </div>
