--- a/class-temp.html
+++ b/class-temp.html
@@ -16,7 +16,7 @@
 
 <body onload="followMouse();">
   <!-- Follow Cursor -->
-  <div class="cursor"></div>
+  <div class="cursor" id="cursor"></div>
   <div class="cursor-wrap">
     <div id="ball"></div>
   </div>
@@ -71,7 +71,7 @@
       <div class="class-bn-2"></div>
     </div>
     <div class="container">
-      <h4 class="align-center w-100">學員作品</h4>
+      <h4 class="sub-title">學員作品</h4>
       <!-- works-card -->
       <div class="works-list wrap-row">
         <div class="works-card w-30">
