--- a/works.html
+++ b/works.html
@@ -124,7 +124,7 @@
       </div>
       <!-- works-series-card -->
       <div class="works-series-wrap wrap-row">
-        <h4 class="align-center w-100">其他系列</h4>
+        <h4 class="sub-title">其他系列</h4>
         <a class="w-45">
           <img src="./assets/series_01.png" alt="">
           <h6 class="align-left">作品名稱</h6>
