--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
       <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
     </div>
     <section class="contact-section">
-      <div class="index-contact-wrap wrap-row">
-        <div class="contact-l w-40">
+      <div class="contact-wrap">
+        <div class="contact-l">
           <h2>CONTACT</h2>
           <div class="text">
             <h1 class="align-left">聯絡我們</h1>
@@ -82,10 +82,10 @@
             </div>
           </div>
         </div>
-        <div class="w-50">
-          <h5 class="dark-color">提供多種內容陶藝課程、陶製品商業與客製化服務，<br>
+        <div class="contact-r">
+          <h5 class="contact-txt dark-color">提供多種內容陶藝課程、陶製品商業與客製化服務，<br>
             歡迎填寫下列表單與我聯繫。</h5>
-          <div class="form wrap-cloumn">
+          <div class="form">
             <div class="form-row">
               <div class="form-column">
                 <div class="input-string">
@@ -132,8 +132,9 @@
 
           </div>
         </div>
+      </div>
     </section>
-    </div>
+
 
 
   </main>
