--- a/arts.html
+++ b/arts.html
@@ -59,44 +59,57 @@
     </div>
     <h2 class="display-title">Art Pottery</h2>
     <h3 class="art-title align-center">藝術陶</h3>
+    <!-- arts-card -->
     <div class="art-wrap wrap-row">
       <div class="w-30 px-24 arts-card arts-card-1">
-        <img src="./assets/arts_01.png" alt="">
+        <a href="#art1">
+          <img class="thumbnail" src="./assets/arts_01.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
         </div>
       </div>
       <div class="w-40 px-24 arts-card arts-card-2">
-        <img src="./assets/arts_02.png" alt="">
+        <a href="#art2">
+          <img class="thumbnail" src="./assets/arts_02.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
         </div>
       </div>
       <div class="w-30 px-24 arts-card arts-card-3">
-        <img src="./assets/arts_03.png" alt="">
+        <a href="#art3">
+          <img class="thumbnail" src="./assets/arts_03.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
         </div>
       </div>
       <div class="w-30 px-24 arts-card arts-card-4">
-        <img src="./assets/arts_04.png" alt="">
+        <a href="#art4">
+          <img class="thumbnail" src="./assets/arts_04.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
         </div>
       </div>
       <div class="w-40 px-24 arts-card arts-card-5">
-        <img src="./assets/arts_05.png" alt="">
+        <a href="#art5">
+          <img class="thumbnail" src="./assets/arts_05.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
         </div>
       </div>
       <div class="w-30 px-24 arts-card arts-card-6">
-        <img src="./assets/arts_06.png" alt="">
+        <a href="#art6">
+          <img class="thumbnail" src="./assets/arts_06.png">
+        </a>
         <div>
           <p>作品名稱</p>
           <p>CONTACT FOR PRICE</p>
@@ -104,6 +117,25 @@
       </div>
     </div>
     <!-- arts-card -->
+    <!-- lightbox -->
+    <a href="#" class="lightbox" id="art1">
+      <img src="./assets/arts_01.png">
+    </a>
+    <a href="#" class="lightbox" id="art2">
+      <img src="./assets/arts_02.png">
+    </a>
+    <a href="#" class="lightbox" id="art3">
+      <img src="./assets/arts_03.png">
+    </a>
+    <a href="#" class="lightbox" id="art4">
+      <img src="./assets/arts_04.png">
+    </a>
+    <a href="#" class="lightbox" id="art5">
+      <img src="./assets/arts_05.png">
+    </a>
+    <a href="#" class="lightbox" id="art6">
+      <img src="./assets/arts_06.png">
+    </a>
   </main>
   <!-- CONTAINER -->
   <!-- FOOTER -->
