--- a/class-temp.html
+++ b/class-temp.html
@@ -72,33 +72,65 @@
     </div>
     <div class="container">
       <h4 class="sub-title">學員作品</h4>
-      <!-- works-card -->
-      <div class="works-list wrap-row">
+      <!-- student-works-wrap -->
+      <div class="works-list wrap-row" id="student">
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_01.jpg" alt="">
+          <a href="#student1">
+            <img class="thumbnail" src="./assets/手捏器皿_01.jpg">
+          </a>
           <div class="align-left">創作者：子毓</div>
         </div>
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_02.jpg" alt="">
+          <a href="#student2">
+            <img class="thumbnail" src="./assets/手捏器皿_02.jpg">
+          </a>
           <div class="align-left">創作者：秋佃</div>
         </div>
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_03.jpg" alt="">
+          <a href="#student3">
+            <img class="thumbnail" src="./assets/手捏器皿_03.jpg">
+          </a>
           <div class="align-left">創作者：岱珈</div>
         </div>
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_04.jpg" alt="">
+          <a href="#student4">
+            <img class="thumbnail" src="./assets/手捏器皿_04.jpg">
+          </a>
           <div class="align-left">創作者：姿宜</div>
         </div>
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_05.jpg" alt="">
+          <a href="#student5">
+            <img class="thumbnail" src="./assets/手捏器皿_05.jpg">
+          </a>
           <div class="align-left">創作者：柔安</div>
         </div>
         <div class="works-card w-30">
-          <img src="./assets/手捏器皿_06.jpg" alt="">
+          <a href="#student6">
+            <img class="thumbnail" src="./assets/手捏器皿_06.jpg">
+          </a>
           <div class="align-left">創作者：浩雲</div>
         </div>
       </div>
+      <!-- student-works-wrap -->
+      <!-- lightbox -->
+      <a href="#" class="lightbox" id="student1">
+        <img src="./assets/手捏器皿_01.jpg">
+      </a>
+      <a href="#" class="lightbox" id="student2">
+        <img src="./assets/手捏器皿_02.jpg">
+      </a>
+      <a href="#" class="lightbox" id="student3">
+        <img src="./assets/手捏器皿_03.jpg">
+      </a>
+      <a href="#" class="lightbox" id="student4">
+        <img src="./assets/手捏器皿_04.jpg">
+      </a>
+      <a href="#" class="lightbox" id="student5">
+        <img src="./assets/手捏器皿_05.jpg">
+      </a>
+      <a href="#" class="lightbox" id="student6">
+        <img src="./assets/手捏器皿_06.jpg">
+      </a>
   </main>
   <!-- FOOTER -->
   <footer class="footer">
