--- a/classes.html
+++ b/classes.html
@@ -73,6 +73,42 @@
       </div>
 
     </section>
+    <section class="track">
+      <div class="camera">
+        <div class="frame">
+          <div class="item item-1">
+            <!--  -->
+            <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
+              製作日常中會使用到的物品。</p>
+            <img src="./assets/class_01.png" alt="">
+            <h5>手捏器皿</h5>
+          </div>
+          <div class="item item-2">
+            <p>學習從掌上型小陶偶，
+              到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+            <img src="./assets/class_02.png" alt="">
+            <h5>手捏器皿</h5>
+          </div>
+          <div class="item item-3">
+            <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
+            <img src="./assets/class_03.png" alt="">
+            <h5>手捏器皿</h5>
+          </div>
+          <div class="item item-4">
+            <p>學習從掌上型小陶偶，
+              到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+            <img src="./assets/class_04.png" alt="">
+            <h5>手捏器皿</h5>
+          </div>
+          <div class="item item-5">
+            <p>學習從掌上型小陶偶，
+              到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+            <img src="./assets/class_05代換.png" alt="">
+            <h5>手捏器皿</h5>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <!-- CONTAINER -->
   <!-- FOOTER -->
@@ -107,8 +143,8 @@
 
   </footer>
   <!-- FOOTER -->
-
-  <script src="./js/follow-cursor.js"></script>
+  <script src="./js/horizonal-plugin.js"></script>
+  <script src="./js/horizonal-scroll.js"></script>
 </body>
 
 </html>
