更新img 修改cursor動態

--- a/class-temp.html
+++ b/class-temp.html
@@ -16,9 +16,8 @@
 
 <body onload="followMouse();">
   <!-- Follow Cursor -->
-  <div class="cursor" id="cursor"></div>
   <div class="cursor-wrap">
-    <div id="ball"></div>
+    <div class="cursor" id="ball"></div>
   </div>
   <!-- Follow Cursor -->
   <!-- NAVBAR -->
@@ -161,7 +160,7 @@
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。</span>
   </footer>
   <!-- FOOTER -->
 
