--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,8 @@
 
 <body onload="followMouse();">
   <!-- Follow Cursor -->
-  <div class="cursor"></div>
   <div class="cursor-wrap">
-    <div id="ball"></div>
+    <div class="cursor" id="ball"></div>
   </div>
   <!-- Follow Cursor -->
   <!-- NAVBAR -->
@@ -62,17 +61,15 @@
       <div class="contact-wrap">
         <div class="contact-l">
           <h2>CONTACT</h2>
-          <div class="text">
+          <div class="text-wrap">
             <h1 class="align-left">聯絡我們</h1>
-            <div class="label">
-              <p>工作室採預約制，如預參觀請來電洽詢。</p>
-              <div class="info-box">
-                <a href="">950<br>台東縣台東市杭州街118號1樓</a><br>
-                <a href="" class="roboto">(+886) 921-271-867</a><br>
-                <a href="" class="roboto">yoshipottery@gmail.com</a>
-              </div>
+            <p>工作室採預約制，如預參觀請來電洽詢。</p>
+            <div class="info-box">
+              <a href="" class="noto-sans">950<br>台東縣台東市杭州街118號1樓</a>
+              <a href="" class="roboto">(+886) 921-271-867</a>
+              <a href="" class="roboto">yoshipottery@gmail.com</a>
               <div class="follow-box">
-                <span class="label">follow us</span>
+                <span class="roboto">follow us</span>
                 <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img
                     src="./assets/instagram.svg" alt=""></a>
                 <span class="label">/</span>
@@ -139,6 +136,7 @@
 
   </main>
   <!-- CONTAINER -->
+
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container-footer">
@@ -168,6 +166,7 @@
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。</span>
   </footer>
   <!-- FOOTER -->
 
