--- a/works.html
+++ b/works.html
@@ -17,9 +17,8 @@
 
 <body onload="followMouse();">
   <!-- Follow Cursor -->
-  <div class="cursor"></div>
   <div class="cursor-wrap">
-    <div id="ball"></div>
+    <div class="cursor" id="ball"></div>
   </div>
   <!-- Follow Cursor -->
   <!-- NAVBAR -->
@@ -38,7 +37,7 @@
               <a class="navlink" href="works.html">生活陶</a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="class.html">課程教學</a>
+              <a class="navlink" href="classes.html">課程教學</a>
             </li>
             <li class="nav-item">
               <a class="navlink" href="contact.html">聯絡我們</a>
@@ -73,7 +72,7 @@
       </div>
       <!-- works-card -->
       <div class="works-list wrap-row">
-        <a class="works-card w-30">
+        <a class="works-card w-30" href="./work-temp.html">
           <img src="./assets/works_01.png" alt="">
           <div>
             <span class="align-left">作品名稱</span>
@@ -169,7 +168,7 @@
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。</span>
   </footer>
   <!-- FOOTER -->
 
